yolo-descision-pending

--- a/checks.ipynb
+++ b/checks.ipynb
@@ -108,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "W0802 02:31:03.344635 34941 analysis_config.cc:971] It is detected that mkldnn and memory_optimize_pass are enabled at the same time, but they are not supported yet. Currently, memory_optimize_pass is explicitly disabled\n"
+      "W0803 16:54:15.249099 14450 analysis_config.cc:971] It is detected that mkldnn and memory_optimize_pass are enabled at the same time, but they are not supported yet. Currently, memory_optimize_pass is explicitly disabled\n"
      ]
     },
     {
@@ -144,8 +144,8 @@
    ],
    "source": [
     "# initialization\n",
-    "from BengaliaiOCR import Detector\n",
-    "detector=Detector(use_gpu=False)\n",
+    "from BengaliaiOCR import PaddleDBNet\n",
+    "detector=PaddleDBNet(use_gpu=False)\n",
     "# getting word boxes\n",
     "word_boxes=detector.get_word_boxes(img)\n",
     "# getting line boxes\n",
